elastic/elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic
  namespace: elastic
  labels:
    app: elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
      - name: elastic
        image: bitnami/elasticsearch:7.13.4
        ports:
          - containerPort: 9300
          - containerPort: 9200
        resources:
          requests:
            memory: "4000Mi"
            cpu: "300m"
        securityContext:
            capabilities:
              add: ["SYS_CHROOT"] 
        volumeMounts:
          - mountPath: /bitnami/elasticsearch/data
            name: elastic-volume
            subPath: data
      volumes:
        - name: elastic-volume
          persistentVolumeClaim: 
            claimName: elastic-claim


---
apiVersion: v1
kind: Service
metadata:
  name: elastic-service
  namespace: elastic
spec:
  selector:
    app: elastic
  ports:
    - port: 9300
      targetPort: 9300 
      name: '9300'
    - port: 9200
      targetPort: 9200
      name: '9200'
