elastic/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elastic-ingress
  namespace: elastic
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: elastic.flou21.de
    http:
      paths:
      - path: /
        backend:
          serviceName: elastic-service
          servicePort: 9200
  - host: elastic2.flou21.de
    http:
      paths:
      - path: /
        backend:
          serviceName: elastic-service
          servicePort: 9300
  - host: kibana.flou21.de
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-service
          servicePort: 5601
